--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -39,3 +39,19 @@
     stroke-dashoffset: 234;
   }
 }
+
+/* Scrollbar CSS */
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
